lu和lc面的编辑保存

--- a/scripts/components/road/tpls/attr_directroute_tpl/directRouteTpl.html
+++ b/scripts/components/road/tpls/attr_directroute_tpl/directRouteTpl.html
@@ -9,19 +9,19 @@
                 <li>
                     <label>进入线</label>
                     <div >
-                        <input type="text" readonly class="fm-control" ng-model="directRouteData.inLinkPid"/>
+                        <input type="text" readonly disabled class="fm-control chosen-disabled" ng-model="directRouteData.inLinkPid"/>
                     </div>
                 </li>
                 <li>
                     <label>进入点</label>
                     <div>
-                        <input type="text" readonly class="fm-control" ng-model="directRouteData.nodePid"/>
+                        <input type="text" readonly disabled class="fm-control chosen-disabled" ng-model="directRouteData.nodePid"/>
                     </div>
                 </li>
                 <li>
                     <label>退出线</label>
                     <div>
-                        <input type="text" readonly class="fm-control" ng-model="directRouteData.outLinkPid"/>
+                        <input type="text" readonly disabled class="fm-control chosen-disabled" ng-model="directRouteData.outLinkPid"/>
                     </div>
                 </li>
                 <li>
@@ -87,19 +87,19 @@
                             <li>
                                 <label>Link组号</label>
                                 <div>
-                                    <input type="text" readonly class="fm-control" ng-model="viasItem.groupId"/>
+                                    <input type="text" disabled class="fm-control chosen-disabled" ng-model="viasItem.groupId"/>
                                 </div>
                             </li>
                             <li>
                                 <label>Link序号</label>
                                 <div>
-                                    <input type="text" readonly class="fm-control" ng-model="viasItem.seqNum"/>
+                                    <input type="text" disabled class="fm-control chosen-disabled" ng-model="viasItem.seqNum"/>
                                 </div>
                             </li>
                             <li>
                                 <label>Link号码</label>
                                 <div>
-                                    <input type="text" readonly class="fm-control" ng-model="viasItem.linkPid"/>
+                                    <input type="text" disabled class="fm-control chosen-disabled" ng-model="viasItem.linkPid"/>
                                 </div>
                             </li>
                         </ul>
