--- a/scripts/components/road/tpls/attr_gate_tpl/rdGateTpl.html
+++ b/scripts/components/road/tpls/attr_gate_tpl/rdGateTpl.html
@@ -11,13 +11,13 @@
                         <li>
                             <label>进入线</label>
                             <div>
-                                <input class="fm-control" type="text"  ng-model="rdGateData.inLinkPid">
+                                <input disabled class="fm-control chosen-disabled" type="text"  ng-model="rdGateData.inLinkPid">
                             </div>
                         </li>
                         <li>
                             <label>退出线</label>
                             <div>
-                                <input class="fm-control" type="text"  ng-model="rdGateData.outLinkPid">
+                                <input disabled class="fm-control chosen-disabled" type="text"  ng-model="rdGateData.outLinkPid">
                             </div>
                         </li>
                         <li>
