--- a/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
@@ -42,7 +42,7 @@
         <!--begin 名称组-->
 	    <div class="module-box show-detail-title" ng-click="showDetail();">
 	        <div class="box-head font-bold">
-	            名称信息（共<span ng-bind="luFaceData.names.length"></span> 条）
+	            名称信息（共<span ng-bind="luFaceData.faceNames.length"></span> 条）
 	        </div>
 	    </div>
     	<!--end 名称组-->
