--- a/scripts/components/road/tpls/attr_rdSlope_tpl/rdSlopeTpl.html
+++ b/scripts/components/road/tpls/attr_rdSlope_tpl/rdSlopeTpl.html
@@ -11,13 +11,13 @@
                         <li>
                             <label>关联点</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="slopeData.nodePid" disabled />
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="slopeData.nodePid" disabled />
                             </div>
                         </li>
                         <li>
                             <label>退出线</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="slopeData.linkPid" disabled />
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="slopeData.linkPid" disabled />
                             </div>
                         </li>
                         <li>
