--- a/scripts/components/road/tpls/attr_se_tpl/rdSeTpl.html
+++ b/scripts/components/road/tpls/attr_se_tpl/rdSeTpl.html
@@ -11,19 +11,19 @@
                         <li>
                             <label class="control-label">进入线</label>
                             <div>
-                                <input type="text" ng-model="seData.inLinkPid"/>
+                                <input type="text" class="chosen-disabled" disabled ng-model="seData.inLinkPid"/>
                             </div>
                         </li>
                         <li>
                             <label class="control-label">进入点</label>
                             <div>
-                                <input type="text" ng-model="seData.nodePid"/>
+                                <input type="text" class="chosen-disabled" disabled ng-model="seData.nodePid"/>
                             </div>
                         </li>
                         <li>
                             <label class="control-label">退出线</label>
                             <div>
-                                <input type="text" ng-model="seData.outLinkPid"/>
+                                <input type="text" class="chosen-disabled" disabled ng-model="seData.outLinkPid"/>
                             </div>
                         </li>
                     </ul>
