--- a/scripts/components/road/tpls/attr_speedbump_tpl/speedBumpTpl.html
+++ b/scripts/components/road/tpls/attr_speedbump_tpl/speedBumpTpl.html
@@ -10,13 +10,13 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input type="text" readonly class="fm-control" ng-model="speedBumpData.linkPid"/>
+                            <input type="text" disabled readonly class="fm-control chosen-disabled" ng-model="speedBumpData.linkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>进入点</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="speedBumpData.nodePid"/>
+                            <input type="text" disabled readonly class="fm-control chosen-disabled" ng-model="speedBumpData.nodePid"/>
                         </div>
                     </li>
                     <li>
