--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
@@ -15,19 +15,19 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input type="text" readonly class="fm-control" ng-model="tollGateData.inLinkPid"/>
+                            <input type="text" readonly class="fm-control  chosen-disabled" disabled ng-model="tollGateData.inLinkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>进入点</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="tollGateData.nodePid"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" disabled ng-model="tollGateData.nodePid"/>
                         </div>
                     </li>
                     <li>
                         <label>退出线</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="tollGateData.outLinkPid"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" disabled ng-model="tollGateData.outLinkPid"/>
                         </div>
                     </li>
                     <li>
