--- a/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
@@ -51,13 +51,13 @@
                         <li>
                             <label>FACE面积</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="lcFaceData.meshId" disabled="disabled">
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="lcFaceData.meshId" disabled="disabled">
                             </div>
                         </li>
                         <li>
                             <label>FACE周长</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="lcFaceData.area" disabled="disabled">
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="lcFaceData.area" disabled="disabled">
                             </div>
                         </li>
                     </ul>
