--- a/scripts/components/road/tpls/attr_lc_tpl/nameInfoTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/nameInfoTpl.html
@@ -20,7 +20,7 @@
         <div class="info-well" id="nameInfo{{item[0].nameGroupid}}" ng-repeat="item in nameGroup | orderBy: 'nameGroupid'">
             <div class="info-head-well">
                 名称组
-                <span ng-bind="item[0].nameGroupId" style="line-height: 2.5;"></span>
+                <span ng-bind="item[0].nameGroupid" style="line-height: 2.5;"></span>
                 <span class="info-option info-remove-ico pull-right" ng-click="removeNameInfo(item[0])"> × </span>
                 <span class="glyphicon glyphicon-menu-down info-option pull-right" ng-click="changeOrder(item,1)" title="下移" ng-if="$index!=details[0].names.length-1"></span>
                 <span class="glyphicon glyphicon-menu-up info-option pull-right" ng-click="changeOrder(item,2)" title="上移" ng-if="$index!=0"></span>
@@ -31,7 +31,7 @@
                     <div class="d-group">
                         <div class="d-name">名称号码：</div>
                         <div class="d-value">
-                            <input type="text" class="d-input" ng-model="nameObj.nameGroupId" readonly>
+                            <input type="text" class="d-input" ng-model="nameObj.nameGroupid" readonly>
                         </div> 
                     </div>
                     <div class="d-group">
