--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -11,13 +11,13 @@
                         <li>
                             <label style="letter-spacing: 1px" class="control-label">进 入 线</label>
                             <div>
-                                <input type="text" ng-model="variableSpeed.inLinkPid" disabled="disabled" />
+                                <input type="text" class="chosen-disabled" ng-model="variableSpeed.inLinkPid" disabled="disabled" />
                             </div>
                         </li>
                         <li>
                             <label style="letter-spacing: 1px" class="control-label">退 出 线</label>
                             <div>
-                                <input type="text" ng-model="variableSpeed.outLinkPid" disabled="disabled" />
+                                <input type="text" class="chosen-disabled" ng-model="variableSpeed.outLinkPid" disabled="disabled" />
                             </div>
                         </li>
                         <li>
