--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -10,7 +10,7 @@
                     <li>
                         <label class="control-label">关联线</label>
                         <div>
-                            <input type="text" ng-model="electronicEyeData.linkPid"/>
+                            <input type="text" class="chosen-disabled" disabled ng-model="electronicEyeData.linkPid"/>
                         </div>
                     </li>
                     <li>
