--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -59,7 +59,7 @@
                     <li ng-if="variableSpeed.vias" ng-repeat="item in variableSpeed.vias">
                         <label class="control-label">道路线{{$index+1}}</label>
                         <div>
-                            <input type="text" ng-model="item.linkPid" disabled="disabled" />
+                            <input type="text" class="chosen-disabled" ng-model="item.linkPid" disabled="disabled" />
                         </div>
                     </li>
                 </ul>
