--- a/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
@@ -17,8 +17,7 @@
                         <li>
                             <label>图幅号</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.meshId"
-                                       disabled="disabled">
+                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.meshId" >
                             </div>
                         </li>
                         <li>
