--- a/less/editor.less
+++ b/less/editor.less
@@ -1713,6 +1713,14 @@ form input[type=checkbox].ng-dirty:before {
   float: right;
 }
 /******************* 精编样式end *******************/
+
+.carousel-inner .item.active{
+  text-align: center;
+  margin: 0 auto;
+  img {
+    display: inline;
+  }
+}
 .pointer{
   cursor: pointer;
 }
