--- a/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
+++ b/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
@@ -8,6 +8,7 @@
                 <a href="#" ng-class="{'tab': true, 'active': propertyType == 'base'}" ng-click="changeProperty('base')">基本属性</a>
                 <a href="#" ng-class="{'tab': true, 'active': propertyType == 'deep'}" ng-click="changeProperty('deep')">深度信息</a>
                 <a href="#" ng-class="{'tab': true, 'active': propertyType == 'relate'}" ng-click="changeProperty('relate')">父子关系</a>
+                <a href="#" ng-class="{'tab': true, 'active': propertyType == 'same'}" ng-click="changeProperty('same')">同一关系</a>
                 <a href="#" ng-class="{'tab': true, 'active': propertyType == 'file'}" ng-click="changeProperty('file')">文件上传</a>
             </div>
             <div ng-show="propertyType=='base'">
@@ -18,6 +19,9 @@
             </div>
             <div ng-show="propertyType=='relate'">
                 <div ng-include="relationInfoTpl"></div>
+            </div>
+            <div ng-show="propertyType=='relate'">
+                <div ng-include="sameInfoTpl"></div>
             </div>
             <div ng-show="propertyType=='file'">
                 <div ng-include="fileUploadTpl"></div>
