--- a/less/editor.less
+++ b/less/editor.less
@@ -1861,3 +1861,19 @@ input[type="range"]::-webkit-slider-thumb {
   top: -15px;
   right: 0;
 }
+.input-addon-left{
+  width: 150px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.input-addon-right{
+  border: 1px solid #fff;
+  padding: 1px;
+  padding-bottom: 2px;
+  margin-left: -4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: #333333;
+}
