--- a/less/editor.less
+++ b/less/editor.less
@@ -1862,9 +1862,9 @@ input[type="range"]::-webkit-slider-thumb {
   right: 0;
 }
 .input-addon-left{
-  width: 150px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  width: 150px !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
 }
 .input-addon-right{
   border: 1px solid #fff;
@@ -1875,5 +1875,5 @@ input[type="range"]::-webkit-slider-thumb {
   padding-right: 4px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #333333;
+  background-color: #504E4E;
 }
