--- a/scripts/components/road/tpls/attr_clm_tpl/rdClmTpl.html
+++ b/scripts/components/road/tpls/attr_clm_tpl/rdClmTpl.html
@@ -56,7 +56,7 @@
                         <li>
                             <label>车道标识</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-model="clmData.laneForming"/>
                             </div>
                         </li>
                         <li>
@@ -90,33 +90,41 @@
                         <li>
                             <label>车道隔离带</label>
                             <div>
-                                <select ng-model="clmData.centerDivider"
-                                        ng-options="value.id as value.label for value in centerDividerObj">
+                                <select ng-model="clmData.laneDivider"
+                                        ng-options="value.id as value.label for value in laneDividerObj">
                                 </select>
                             </div>
                         </li>
                         <li>
                             <label>车道方向</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <label>
+                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 无
+                                </label>
+                                <label>
+                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 顺
+                                </label>
+                                <label>
+                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 逆
+                                </label>
                             </div>
                         </li>
                         <li>
                             <label>车道时间段</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-model="clmData.directionTime"/>
                             </div>
                         </li>
                         <li>
                             <label>车辆类型</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-model="clmData.vehicle"/>
                             </div>
                         </li>
                         <li>
                             <label>车辆时间段</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-model="clmData.vehicleTime"/>
                             </div>
                         </li>
                     </ul>
