--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1877,9 +1877,9 @@ input[type="range"]::-webkit-slider-thumb {
   right: 0;
 }
 .input-addon-left {
-  width: 150px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  width: 150px !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
 }
 .input-addon-right {
   border: 1px solid #fff;
@@ -1890,5 +1890,5 @@ input[type="range"]::-webkit-slider-thumb {
   padding-right: 4px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #333333;
+  background-color: #504E4E;
 }
