同一关系样式修改

--- a/less/editor.less
+++ b/less/editor.less
@@ -244,13 +244,13 @@ a{
   font-weight: bold;
 }
 .fm-tabs {
-  padding: 0 10px;
+  padding: 0 5px;
   margin-bottom: 5px;
   a.tab {
     color: #ccc;
     font-weight: bold;
     text-decoration: none;
-    padding: 6px 5px;
+    padding: 6px 2px;
     display: inline-block;
     text-align: center;
     background-color: @bkground-color;
@@ -1501,6 +1501,12 @@ form input[type=checkbox].ng-dirty:before {
     };
     .tdWidthInput{
       width: 15%;
+    };
+    .tdWidthText{
+      width: 60%;
+    };
+    .tdWidthLable{
+      width: 30%;
     };
     td{
       line-height:16px;
