--- a/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
+++ b/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
@@ -20,7 +20,7 @@
             <div ng-show="propertyType=='relate'">
                 <div ng-include="relationInfoTpl"></div>
             </div>
-            <div ng-show="propertyType=='relate'">
+            <div ng-show="propertyType=='same'">
                 <div ng-include="sameInfoTpl"></div>
             </div>
             <div ng-show="propertyType=='file'">
