--- a/scripts/components/poi/tpls/attr-base/samePoisTpl.html
+++ b/scripts/components/poi/tpls/attr-base/samePoisTpl.html
@@ -1,23 +1,27 @@
 <div ng-controller="samePoisCtrl">
     <div ng-show="propertyType=='same'">
-        <div class="fm-panel" >
+        <div class="fm-panel">
             <div class="title">
-                <div>同一关系POI</div>
-                <span class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: left;cursor:pointer;" ng-click="deleteSamePoi()"></span>
+                <div>同一关系POI
+                <a ng-if="poi.samepoiParts.length > 0" class="glyphicon glyphicon-remove-sign"
+                      style="padding-top:3px;float: right;color: darkgray;cursor:pointer;" title="删除同一关系"
+                      ng-click="deleteSamePoi(poi)"></a>
+                </div>
             </div>
             <div class="content">
-                <div ng-repeat="cItem in sameData.pids" class="blackTheme module-box">
-                    <ul class="fm-ul fm-ul-form">
-                        <li >
-                            <label>PID序号{{$index+1}}</label>
-                            <div>
-                                <input type="text" class="fm-control" ng-model="cItem.seqNum" disabled/>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="fm-ul fm-ul-list">
+                    <li ng-if="poi.samepoiParts.length <= 0">
+                        <label>
+                            无
+                        </label>
+                    </li>
+                    <li ng-if="poi.samepoiParts.length > 0" ng-repeat="cItem in poi.samepoiParts">
+                        <label>
+                            {{cItem.poiPid}}
+                        </label>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
 </div>
-
