--- a/less/editor.less
+++ b/less/editor.less
@@ -1649,7 +1649,7 @@ form input[type=checkbox].ng-dirty:before {
   z-index: 99;
   .log-message {
     color: #fff;
-    background-color: #222;
+    background-color: #49A7DA;
     padding: 13px;
     height: 40px;
     margin-top: 3px;
