地址拼音编辑

--- a/less/editor.less
+++ b/less/editor.less
@@ -1712,6 +1712,9 @@ form input[type=checkbox].ng-dirty:before {
   cursor: pointer;
   float: right;
 }
+.wordColor{
+  color: #f0ad4e;
+}
 /******************* 精编样式end *******************/
 
 .carousel-inner .item.active{
