--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1731,6 +1731,9 @@ form input[type=checkbox].ng-dirty:before {
   cursor: pointer;
   float: right;
 }
+.wordColor {
+  color: #f0ad4e;
+}
 /******************* 精编样式end *******************/
 .carousel-inner .item.active {
   text-align: center;
