--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -47,6 +47,11 @@
     <div class="btn-group">
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addRelation':'active'}[shapeOperator]" data-toggle="dropdown">关系 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
+            <li class="btn-group btn-group-sm" style="margin:0 2px;color:#fff;font-size:12px;">
+              <label>
+                <input type="checkbox" ng-model="isLinkTrack" ng-checked="isLinkTrack"> 追踪Link
+              </label>
+            </li>
             <li class="btn-group btn-group-sm" style="margin: 0 2px;">
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'RDCROSS':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDCROSS')">路口</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'RDSPEEDLIMIT':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSPEEDLIMIT')">限速</button>
