英文地址作业

--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -54,14 +54,11 @@
                       <label >24小时</label>
                       <div>
                           <label>
-                              <input fm-edit-view type="radio" name="24h" value="0" ng-model="poi.open24h">
+                              <input fm-edit-view type="radio" name="24h" value=0 ng-model="poi.open24h">
                               未调查
                           </label>
                           <label>
-                              <input fm-edit-view type="radio" name="24h" value="1" ng-model="poi.open24h">
-                              是
-                          </label>
-                              <input fm-edit-view type="radio" name="24h" value="1" ng-model="poi.open24h">
+                              <input fm-edit-view type="radio" name="24h" value=1 ng-model="poi.open24h">
                               是
                           </label>
                           <label>
