--- a/less/editor.less
+++ b/less/editor.less
@@ -1721,6 +1721,9 @@ form input[type=checkbox].ng-dirty:before {
 .wordColor{
   color: #f0ad4e;
 }
+.wordColorWhite{
+  color: white;
+}
 /******************* 精编样式end *******************/
 
 .carousel-inner .item.active{
