--- a/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
@@ -54,7 +54,7 @@
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
 		<div class="fm-panel">
 			<div class="title">
-				<span style="cursor: pointer">地址作业</span>
+				<span>地址拼音作业</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
 			</div>
 			<div>
