--- a/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
@@ -1,133 +1,88 @@
-<div ng-controller="deepInfoCtl">
+<div ng-controller="chargingStationCtrl">
     <div ng-show="propertyType=='deep'">
         <div class="fm-panel">
-            <div class="content" ng-repeat="charging in chargingArr">
-                <ul >
-                    <a href="#deepInfoOne" data-toggle="tab" data-width="">专有信息{{$index+1}}
-                        <div class="btn-group"  style="display: inline-block;float: right;" ng-if="chargingArr.length==2">
-                            <button  data-toggle="tooltip"  data-index="{{$index}}" title="删除" class="glyphicon glyphicon-remove" type="button" ng-click="removeChargPole($index)"/>
-                        </div>
-                        <div class="btn-group"  style="display: inline-block;float: right;" ng-if="chargingArr.length==1">
-                            <button  data-toggle="tooltip"  title="添加"  class="glyphicon glyphicon-plus"  style="margin-right: 5px;" type="button" ng-click="addChargPole()"/>
-                        </div>
-                    </a>
-                </ul>
+            <div class="content" style="padding-bottom: 30px;">
                 <ul class="fm-ul fm-ul-form">
                     <li>
-                        <label>分组号</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.groupId"/></div>
-                    </li>
-                    <li>
-                        <label>充电桩编号</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.plotNum"/></div>
-                    </li>
-                    <li>
-                        <label>设备生产商</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.manufacturer"/></div>
-                    </li>
-                    <li>
-                        <label>出厂编号</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.factoryNum"/></div>
-                    </li>
-                    <li>
-                        <label>产品型号</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.productNum"/></div>
-                    </li>
-                    <li>
-                        <label>泊位号码</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.parkingNum"/></div>
-                    </li>
-                    <li>
-                        <label>楼层</label>
-                        <div><input type="number" class="fm-control" ng-model="charging.floor" min="-5" maxLength="6" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')"/></div>
-                    </li>
-                    <li>
-                        <label>支付方式</label>
+                        <label>充电站类型</label>
                         <div>
-                            <label ng-repeat="(key, value) in chargingPayment">
-                                <input type="checkbox" value="{{key}}" ng-model="charging.payment[key]"> {{value}}
+                            <select fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].chargingType"
+                                    ng-options="value.id as value.label for value in chargingTypeArr">
+                            </select>
+                        </div>
+                    </li>
+                    <li ng-if="poi.chargingStation[0].chargingType == 2 || poi.chargingStation[0].chargingType == 4">
+                        <label>换电车品牌</label>
+                        <div>
+                            <select fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].changeBrands"
+                                    no_results_text="'--无--'" placeholder_text_single="'--请选择--'"
+                                    ng-options="value as lable.chainName for (value, lable) in chainList"
+                                    chosen>
+                            </select>
+                        </div>
+                    </li>
+                    <li ng-if="poi.chargingStation[0].chargingType == 2 || poi.chargingStation[0].chargingType == 4">
+                        <label>换电车开放限制</label>
+                        <div class="block">
+                            <label ng-repeat="(key, value) in chargingOpenType" class="col-md-5">
+                                <input fm-edit-view type="checkbox" value="{{key}}"
+                                       ng-model="poi.chargingStation[0].chargingOpenType[key]"
+                                       ng-click="chargingOpenTypeChange($event)"> {{value}}
                             </label>
                         </div>
                     </li>
                     <li>
-                        <label>充电模式</label>
+                        <label>充电桩总数</label>
+                        <div><input fm-edit-view type="number" class="fm-control"
+                                    ng-model="poi.chargingStation[0].chargingNum" min="0" maxLength="6"
+                                    onkeyup="this.value=this.value.replace(/\D/g,'')"
+                                    onafterpaste="this.value=this.value.replace(/\D/g,'')"/></div>
+                    </li>
+                    <li>
+                        <label>服务提供商</label>
                         <div>
-                            <label ng-repeat="(key, value) in chargingMode">
-                                <input type="radio" value="{{key}}" ng-model="charging.mode"> {{value}}
+                            <select fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].serviceProv"
+                                    ng-options="value.id as value.label for value in serviceProvArr">
+                            </select>
+                        </div>
+                    </li>
+                    <li>
+                        <label>备注</label>
+                        <div>
+                            <input fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].memo">
+                        </div>
+                    </li>
+                    <li>
+                        <label>开放时间</label>
+                        <div>
+                            <input fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].openHour" rows="">
+                        </div>
+                    </li>
+                    <li>
+                        <label >停车收费</label>
+                        <div>
+                            <label>
+                                <input fm-edit-view type="radio" name="indoor" value="0" ng-model="poi.chargingStation[0].parkingFees">
+                                免费
+                            </label>
+                            <label>
+                                <input fm-edit-view type="radio" name="indoor" value="1" ng-model="poi.chargingStation[0].parkingFees">
+                                收费
                             </label>
                         </div>
                     </li>
                     <li>
-                        <label>位置类型</label>
+                        <label>收费备注</label>
                         <div>
-                            <label ng-repeat="(key, value) in locationtype">
-                                <input type="radio" value="{{key}}" ng-model="charging.locationType"> {{value}}
-                            </label>
+                            <input fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].parkingInfo" rows="">
                         </div>
                     </li>
                     <li>
-                        <label>电流类型</label>
+                        <label>可用状态</label>
                         <div>
-                            <label ng-repeat="(key, value) in chargingAcdc">
-                                <input type="radio" value="{{key}}" ng-model="charging.acdc"> {{value}}
-                            </label>
-                        </div>
-                    </li>
-                    <li>
-                        <label>插头类型</label>
-                        <div>
-                            <label ng-repeat="(key, value) in chargingPlugType">
-                                <input type="radio" value="{{key}}" ng-model="charging.acdc"> {{value}}
-                            </label>
-                        </div>
-                    </li>
-                    <li>
-                        <label>充电功率</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.power"/></div>
-                    </li>
-                    <li>
-                        <label>充电电压</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.voltage"/></div>
-                    </li>
-                    <li>
-                        <label>充电电流</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.current"/></div>
-                    </li>
-                    <li>
-                        <label>充电价格</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.prices"/></div>
-                    </li>
-                    <li>
-                        <label>同组桩数</label>
-                        <div><input type="text" class="fm-control" ng-model="charging.count"/></div>
-                    </li>
-                    <li>
-                        <label>充电口数</label>
-                        <div><input type="number" class="fm-control" ng-model="charging.plugNum"/></div>
-                    </li>
-                    <li>
-                        <label>开放状态</label>
-                        <div>
-                            <label ng-repeat="(key, value) in chargingOpenType" ng-if="key == 1" style="padding:0px;color:green">
-                                <input type="checkbox" value="{{key}}" ng-model="charging.openType[key]" ng-click="changeOpenType($event,charging)"> {{value}}
-                            </label>
-                            <label ng-repeat="(key, value) in chargingOpenType" ng-if="key != 1">
-                                <input type="checkbox" value="{{key}}" ng-model="charging.openType[key]" ng-click="changeOpenType($event,charging)"> {{value}}
-                            </label>
-                            <div>
-                                <select class="fm-control" ng-model="charging.selectedChain"
-                                        ng-options="value as lable.chainName for (value, lable) in charging.chargeChainObj"
-                                        chosen style="width: 80%;" ng-change="chianChange($event, charging)">
-                                </select>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <label>服务状态</label>
-                        <div>
-                            <label ng-repeat="(key, value) in chargingAvailableState">
-                                <input type="radio" value="{{key}}" ng-model="charging.availableState"> {{value}}
-                            </label>
+                            <select fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].availableState"
+                                    ng-options="value.id as value.label for value in stationAvailableState">
+                            </select>
                         </div>
                     </li>
                 </ul>
